added exchange cards feature

--- a/code/PokerPP.glade
+++ b/code/PokerPP.glade
@@ -14,34 +14,6 @@
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <child>
-          <object class="GtkButton" id="fold_button">
-            <property name="label" translatable="yes">Fold</property>
-            <property name="width_request">100</property>
-            <property name="height_request">50</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-          </object>
-          <packing>
-            <property name="x">20</property>
-            <property name="y">350</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkButton" id="check_button">
-            <property name="label" translatable="yes">Check</property>
-            <property name="width_request">100</property>
-            <property name="height_request">50</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-          </object>
-          <packing>
-            <property name="x">130</property>
-            <property name="y">350</property>
-          </packing>
-        </child>
-        <child>
           <object class="GtkEntry" id="bet_entry">
             <property name="width_request">100</property>
             <property name="height_request">50</property>
@@ -118,12 +90,6 @@
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
-                      </object>
-                    </child>
-                    <child>
-                      <object class="GtkSeparatorMenuItem">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
                       </object>
                     </child>
                     <child>
@@ -397,6 +363,51 @@
           <packing>
             <property name="x">592</property>
             <property name="y">130</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButton" id="exchange_button">
+            <property name="label" translatable="yes">Exchange Cards</property>
+            <property name="width_request">100</property>
+            <property name="height_request">50</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <signal name="activate" handler="on_exchange_clicked()" swapped="no"/>
+          </object>
+          <packing>
+            <property name="x">255</property>
+            <property name="y">350</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButton" id="check_button">
+            <property name="label" translatable="yes">Check</property>
+            <property name="width_request">100</property>
+            <property name="height_request">50</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <signal name="activate" handler="on_fold_click()" swapped="no"/>
+          </object>
+          <packing>
+            <property name="x">130</property>
+            <property name="y">350</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkButton" id="fold_button">
+            <property name="label" translatable="yes">Fold</property>
+            <property name="width_request">100</property>
+            <property name="height_request">50</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+            <signal name="clicked" handler="on_fold_click" swapped="no"/>
+          </object>
+          <packing>
+            <property name="x">20</property>
+            <property name="y">350</property>
           </packing>
         </child>
       </object>
