--- a/Code/PokerPP.glade
+++ b/Code/PokerPP.glade
@@ -303,7 +303,7 @@
             <property name="height_request">50</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="label" translatable="yes">" current State "</property>
+            <property name="label" translatable="yes">" Waiting for players... "</property>
           </object>
           <packing>
             <property name="x">640</property>
